crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__type_alias__tests__error_missing_name.snap
---
source: crates/nash-parse/src/declaration/type_alias.rs
description: type alias = int
info: diagnostic
---
nash::syntax

  × Expected a name after `type alias`.
   ╭─[src/Main.nash:1:12]
 1 │ type alias = int
   ·            ─
   ╰────
  help: Name the alias before its parameters and body.
