crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__type_alias__tests__type_alias_simple.snap
---
source: crates/nash-parse/src/declaration/type_alias.rs
assertion_line: 112
description: type alias Name = String
---
Alias(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 25,
            },
        },
        value: Alias {
            docs: None,
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 16,
                    },
                },
                value: "Name",
            },
            arguments: [],
            typ: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 19,
                    },
                    end: Position {
                        line: 1,
                        column: 25,
                    },
                },
                value: Type {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 19,
                        },
                        end: Position {
                            line: 1,
                            column: 25,
                        },
                    },
                    name: "String",
                    args: [],
                },
            },
            attributes: [],
        },
    },
)
