crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__type_alias__tests__type_alias_with_params.snap
---
source: crates/nash-parse/src/declaration/type_alias.rs
assertion_line: 117
description: "type alias Pair 'a 'b = ('a, 'b)"
---
Alias(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 33,
            },
        },
        value: Alias {
            docs: None,
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 16,
                    },
                },
                value: "Pair",
            },
            arguments: [
                TypeParam {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 17,
                            },
                            end: Position {
                                line: 1,
                                column: 19,
                            },
                        },
                        value: "a",
                    },
                    repr: None,
                },
                TypeParam {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 20,
                            },
                            end: Position {
                                line: 1,
                                column: 22,
                            },
                        },
                        value: "b",
                    },
                    repr: None,
                },
            ],
            typ: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 25,
                    },
                    end: Position {
                        line: 1,
                        column: 33,
                    },
                },
                value: Tuple {
                    first: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 26,
                            },
                            end: Position {
                                line: 1,
                                column: 28,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                    second: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 30,
                            },
                            end: Position {
                                line: 1,
                                column: 32,
                            },
                        },
                        value: Var(
                            "b",
                        ),
                    },
                    rest: [],
                },
            },
            attributes: [],
        },
    },
)
